some small changes

--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
   <link rel="stylesheet" href="static/styles.css">
-  <title>Colors in image</title>
+  <title>Цвета в изображении</title>
 </head>
 
 <body>
